--- a/nginx.conf
+++ b/nginx.conf
@@ -57,7 +57,7 @@ http {
 
 		location / {
 			# try_files $uri @rewrite; # For Drupal &lt;= 6
-			try_files $uri /index.php?$query_string; # For Drupal &gt;= 7
+			try_files $uri /app.php?$query_string; # For Drupal &gt;= 7
 		}
 
 		location @rewrite {
@@ -84,7 +84,7 @@ http {
 			fastcgi_temp_file_write_size 256k;
 			fastcgi_intercept_errors on; 
 			fastcgi_index index.php;
-			fastcgi_param SCRIPT_FILENAME /home/site/wwwroot$fastcgi_script_name;
+			fastcgi_param SCRIPT_FILENAME /home/site/wwwroot/web$fastcgi_script_name;
 			include fastcgi_params;
 		}
 
