--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
     gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
     server {
-		server_name www.example.com;
+		server_name staging.beis.deped.gov.ph;
 		root /home/site/wwwroot/web; ## &lt;-- Your only path $
 		error_log /home/LogFiles/nginx/error.log;
 
@@ -72,7 +72,7 @@ http {
 		#   location ~ \.php(/|$) {
 		# The laxer rule will continue to work if Drupal uses this new URL pattern with front
 		# controllers other than update.php in a future release.
-		location ~ '\.php$|^/update.php' {
+		location ~ ^/app\.php(/|$) {
 			fastcgi_pass unix:/run/php/php7.0-fpm.sock;
 			fastcgi_split_path_info ^(.+?\.php)(/.*)?$;
 			fastcgi_connect_timeout         300; 
