--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
     gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
     server {
-		server_name staging.beis.deped.gov.ph;
+		server_name www.example.com;
 		root /home/site/wwwroot/web; ## &lt;-- Your only path $
 		error_log /home/LogFiles/nginx/error.log;
 
@@ -57,7 +57,7 @@ http {
 
 		location / {
 			# try_files $uri @rewrite; # For Drupal &lt;= 6
-			try_files $uri /app.php?$query_string; # For Drupal &gt;= 7
+			try_files $uri /index.php?$query_string; # For Drupal &gt;= 7
 		}
 
 		location @rewrite {
@@ -72,7 +72,7 @@ http {
 		#   location ~ \.php(/|$) {
 		# The laxer rule will continue to work if Drupal uses this new URL pattern with front
 		# controllers other than update.php in a future release.
-		location ~ ^/app\.php(/|$) {
+		location ~ '\.php$|^/update.php' {
 			fastcgi_pass unix:/run/php/php7.0-fpm.sock;
 			fastcgi_split_path_info ^(.+?\.php)(/.*)?$;
 			fastcgi_connect_timeout         300; 
@@ -84,7 +84,7 @@ http {
 			fastcgi_temp_file_write_size 256k;
 			fastcgi_intercept_errors on; 
 			fastcgi_index index.php;
-			fastcgi_param SCRIPT_FILENAME /home/site/wwwroot/web$fastcgi_script_name;
+			fastcgi_param SCRIPT_FILENAME /home/site/wwwroot$fastcgi_script_name;
 			include fastcgi_params;
 		}
 
