--- a/drupal-nginx-fpm/php7.2.9/Dockerfile
+++ b/drupal-nginx-fpm/php7.2.9/Dockerfile
@@ -1,4 +1,4 @@
-FROM appsvcorg/nginx-fpm:php7.2.9-local-storage
+FROM reymarkhagutin14/nginx-fpm:php7.2.9-local-storage
 MAINTAINER Azure App Service Container Images <appsvc-images@microsoft.com>
 # ========
 # ENV vars
